kustomize-other/base/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sillier-demo
  labels:
    app.kubernetes.io/name: sillier-demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sillier-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sillier-demo
    spec:
      containers:
      - name: sillier-demo
        image: docker.io/vfarcic/silly-demo:1.1.3
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
