kustomize-other/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sillier-demo
  labels:
    app.kubernetes.io/name: sillier-demo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sillier-demo
                port:
                  number: 8080
      host: sillier-demo.127.0.0.1.nip.io
